--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 header {
 font-size: 45px;
-color: rgb(133, 202, 151);
-border-bottom: solid 10px grey;
+color: rgb(13, 14, 13);
+border-bottom: solid 10px rgb(9, 9, 9);
 text-align: center;
 }
