--- a/style.css
+++ b/style.css
@@ -9,3 +9,8 @@ color: rgb(13, 14, 13);
 border-bottom: solid 10px rgb(9, 9, 9);
 text-align: center;
 }
+
+section {
+display: flex;
+background-color: gainsboro;
+}
