--- a/style.css
+++ b/style.css
@@ -4,13 +4,19 @@ body {
 }
 
 header {
-font-size: 45px;
-color: rgb(13, 14, 13);
-border-bottom: solid 10px rgb(9, 9, 9);
-text-align: center;
+   font-size: 45px;
+   color: rgb(13, 14, 13);
+   border-bottom: solid 10px rgb(9, 9, 9);
+   text-align: center;
 }
 
 section {
-display: flex;
-background-color: gainsboro;
+   display: flex;
+   background-color: gainsboro;
+   padding: 30px;
 }
+
+.chamada-texto{
+   padding-right: ; 5%;
+
+}    
