--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ section {
    display: flex;
    background-color: gainsboro;
    padding: 30px;
+   justify-content: center;
 }
 
 .chamada-texto{
