--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(60, 99, 60);
     color: rgb(90, 89, 89);
+    margin: 0px;
 }
 
 header {
@@ -17,6 +18,8 @@ section {
    padding: 30px;
    justify-content: center;
    font-family: "Luckiest Guy", cursive;
+   padding: 30px;
+   justify-content: center;
 }
 
 .chamada-texto {
