--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ section {
    font-family: "Luckiest Guy", cursive;
    padding: 30px;
    justify-content: center;
+   margin-top: 20px;
 }
 
 .chamada-texto {
